# yeelight_webcontrol

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
cli/: server.py
